# auth

./: .dockerignore  .gitignore  Cargo.toml  Makefile  compose.yaml  docker_run_backend_rust.sh  dockerfile_backend  dockerfile_backend_rest  dockerfile_frontend  dropbox_ignore.sh  push.sh  push_backend.sh  push_frontend.sh  readme.md  sqlx-data.json
backend/: Cargo.toml  Dockerfile  sqlx-data.json
backend/src/: main.rs
backend/src/backend_lib/: alpaca_activity.rs  data_collector.rs  db.rs  mod.rs  web_client_service.rs  websocket_service.rs
backend_data/: Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend_data/src/: main.rs
backend_data/src/backend_lib/: account.rs  alpaca_activity.rs  (+5 more)
backend_rest/: Cargo.toml
backend_rest/src/: main.rs
common_lib/: Cargo.toml
common_lib/src/: common_structs.rs  init.rs  lib.rs  trade_struct.rs
data_collection/: Cargo.toml  README.md  pull.sh
data_collection/src/: main.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md  all_docker.sh  push.sh  sqlx-data.json
frontend/src/: main.rs
frontend/src/frontend_lib/: alpaca_activity.rs  configuration.rs  mod.rs
frontend/src/frontend_lib/common/: common_structs.rs  http.rs  mod.rs  trade_struct.rs
frontend/src/frontend_lib/frontend/: account.rs  activities.rs  login.rs  metrics.rs  mod.rs  profit.rs  signup.rs  symbols.rs  utils.rs  web_server.rs
frontend/static/templates/: activity_table.html  avg.html  base0.html  chart.html  login.html  login_result.html  profit_table.html  signup.html  symbol_table.html
frontend/tests/: health_check.rs
frontend_ui/: Cargo.toml  Dockerfile  changelog.md  sqlx-data.json
frontend_ui/config/: configuration.sample.yaml
migrations/: 20230121071337_create_user_table.sql  20230127210501_create_original_tables_0.sql  20230127211628_create_original_tables_1_t_last_trade.sql  20230127212044_create_original_tables_2_t_ws_trade.sql  20230313173141_create_bar_minute_table.sql  20230317062807_create_order_table.sql  20230317071904_recreate_alpaca_order_table.sql  20230317184924_add_unique_to_order_id.sql  20230325012133_create_alpaca_activity_table.sql  20230523201055_create_user_table.sql
monitor/: readme.md
scripts/: create_db.sh
(+35 files in other folders)
