[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"]}
bigdecimal = {version = "0.3.0", features = ["serde"]}
sqlx = { version="0.6.2", features=["runtime-async-std-rustls", "macros", "postgres", "uuid", "chrono", "bigdecimal", "offline"]}
