[package]
name = "frontend"
version = "0.2.0"
authors = ["gp <github@swimr.com>"]
edition = "2021"

[lib]
path= "src/frontend_lib/mod.rs"

[[bin]]
path="src/main.rs"
name="trade_frontend"

[dependencies]
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=[ "std", "registry", "env-filter", "fmt"]}
tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"]}
tungstenite = {version = "0.18.0", features = ["native-tls"]}
futures-util = { version = "0.3.21", default-features = false, features = ["sink", "std"] }
url = "2.2.2"

serde = { version = "1.0.152", features = ["derive"] }
serde_json="1.0.91"
reqwest = { version = "0.11.14", features = ["json"] }
bigdecimal = {version = "0.3.0", features = ["serde"]}
sqlx = { version="0.6.2", features=["runtime-async-std-rustls", "macros", "postgres", "uuid", "chrono", "bigdecimal", "offline"]}
 chrono = { version = "0.4.23", features = ["serde"]}
 chrono-tz = "0.8.2"

time = "0.3.20"

rust_decimal = "1.27.0"
actix-web = "4"
config = "0.13.3"
handlebars = { version = "4.3.6", features = ["dir_source"] }
uuid = { version = "0.8.2", features = ["v4"] }
argon2 = { version = "0.4.1", features = ["std"] }
rand = { version = "0.8.5", features=["std_rng"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
once_cell = "1.17.1"